--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
   <body>
     <nav class="navbar">
       <div class="logo">
-        <img src="/home/eruusuta/Downloads/images.webp" alt="Logo" />
+        <img src="images.webp" alt="Logo" />
       </div>
       <div class="name" style="margin-right: 550px">Welster</div>
       <div class="links" style="margin-right: 10px; gap: 10px">
@@ -284,31 +284,31 @@
       <h2>My Hobbies</h2>
       <div class="hobbies-grid">
         <div class="hobby-card">
-          <img src="/home/eruusuta/Downloads/coding.jpg" alt="Coding" />
+          <img src="coding.jpg" alt="Coding" />
           <h3>Coding</h3>
           <p>Creating small apps and websites in my free time.</p>
         </div>
 
         <div class="hobby-card">
-          <img src="/home/eruusuta/Downloads/sunset.jpg" alt="Photography" />
+          <img src="sunset.jpg" alt="Photography" />
           <h3>Photography</h3>
           <p>Capturing beautiful sunsets.</p>
         </div>
 
         <div class="hobby-card">
-          <img src="/home/eruusuta/Downloads/mlbb.jpg" alt="Gaming" />
+          <img src="mlbb.jpg" alt="Gaming" />
           <h3>Gaming</h3>
           <p>Exploring new video games and connecting with friends.</p>
         </div>
 
         <div class="hobby-card">
-          <img src="/home/eruusuta/Downloads/physychology.jpg" alt="Reading" />
+          <img src="physychology.jpg" alt="Reading" />
           <h3>Reading</h3>
           <p>Reading books on technology, psychology, and history.</p>
         </div>
 
         <div class="hobby-card">
-          <img src="/home/eruusuta/Downloads/anime.jpg" alt="Anime" />
+          <img src="anime.jpg" alt="Anime" />
           <h3>Anime</h3>
           <p>Watching anime when I have free time.</p>
         </div>
